--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Daniil Aksenov (dbax), Database Engeneer
 markdown: kramdown
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-hacker
 permalink: /blog/:year/:month/:day/:title
